--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<commons-io.version>1.3.2</commons-io.version>
 		<redis-clients.version>2.6.0</redis-clients.version>
 		<commons-lang3.version>3.3.1</commons-lang3.version>
+		<redisson.version>2.4.0</redisson.version>
+
 	</properties>
 
 	<dependencies>
@@ -37,13 +39,13 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-			<version>${redis-clients.version}</version>
-			<!-- 依赖模块将提供 -->
-			<scope>provided</scope>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>redis.clients</groupId> -->
+		<!-- <artifactId>jedis</artifactId> -->
+		<!-- <version>${redis-clients.version}</version> -->
+		<!-- 依赖模块将提供 -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
@@ -129,6 +131,14 @@
 			<version>${commons-lang3.version}</version>
 			<!-- 依赖模块将提供 -->
 			<!-- <scope>provided</scope> -->
+		</dependency>
+
+		<dependency>
+			<groupId>org.redisson</groupId>
+			<artifactId>redisson</artifactId>
+			<version>${redisson.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
