--- a/pom.xml
+++ b/pom.xml
@@ -32,10 +32,10 @@
 	<dependencies>
 
 		<dependency>
-		    <groupId>javax.xml.bind</groupId>
-		    <artifactId>jaxb-api</artifactId>
-		    <version>${jaxb.version}</version>
-		    <!-- 依赖模块将提供 -->
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${jaxb.version}</version>
+			<!-- 依赖模块将提供 -->
 			<scope>provided</scope>
 		</dependency>
 
@@ -148,6 +148,36 @@
 			<!-- 依赖模块将提供 -->
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.qiniu</groupId>
+			<artifactId>qiniu-java-sdk</artifactId>
+			<version>[7.2.0, 7.2.99]</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- <dependency> -->
+		<!-- <groupId>com.squareup.okhttp3</groupId> -->
+		<!-- <artifactId>okhttp</artifactId> -->
+		<!-- <version>3.3.1</version> -->
+		<!-- 依赖模块将提供 -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.google.code.gson</groupId> -->
+		<!-- <artifactId>gson</artifactId> -->
+		<!-- <version>2.6.2</version> -->
+		<!-- 依赖模块将提供 -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>com.qiniu</groupId> -->
+		<!-- <artifactId>happy-dns-java</artifactId> -->
+		<!-- <version>0.1.4</version> -->
+		<!-- 依赖模块将提供 -->
+		<!-- <scope>provided</scope> -->
+		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>junit</groupId>
