--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<commons-lang3.version>3.3.1</commons-lang3.version>
 		<redisson.version>2.4.0</redisson.version>
 		<jaxb.version>2.2.12</jaxb.version>
+		<qiniu.version>[7.2.0, 7.2.99]</qiniu.version>
 	</properties>
 
 	<dependencies>
@@ -152,32 +153,17 @@
 		<dependency>
 			<groupId>com.qiniu</groupId>
 			<artifactId>qiniu-java-sdk</artifactId>
-			<version>[7.2.0, 7.2.99]</version>
+			<version>${qiniu.version}</version>
 			<!-- 依赖模块将提供 -->
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- <dependency> -->
-		<!-- <groupId>com.squareup.okhttp3</groupId> -->
-		<!-- <artifactId>okhttp</artifactId> -->
-		<!-- <version>3.3.1</version> -->
-		<!-- 依赖模块将提供 -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.google.code.gson</groupId> -->
-		<!-- <artifactId>gson</artifactId> -->
-		<!-- <version>2.6.2</version> -->
-		<!-- 依赖模块将提供 -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.qiniu</groupId> -->
-		<!-- <artifactId>happy-dns-java</artifactId> -->
-		<!-- <version>0.1.4</version> -->
-		<!-- 依赖模块将提供 -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
+		
+		<dependency>
+		    <groupId>org.jsoup</groupId>
+		    <artifactId>jsoup</artifactId>
+		    <version>1.10.2</version>
+		</dependency>
+		
 
 		<dependency>
 			<groupId>junit</groupId>
