--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,36 @@
 		<redisson.version>2.4.0</redisson.version>
 		<jaxb.version>2.2.12</jaxb.version>
 		<qiniu.version>[7.2.0, 7.2.99]</qiniu.version>
+		<dbutils.version>1.6</dbutils.version>
+		<mysql.version>6.0.6</mysql.version>
+		<sqlite.version>3.16.1</sqlite.version>
 	</properties>
 
 	<dependencies>
+		
+		<dependency>
+		    <groupId>org.xerial</groupId>
+		    <artifactId>sqlite-jdbc</artifactId>
+		    <version>${sqlite.version}</version>
+		    <!-- 依赖模块将提供 -->
+		    <scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+    		<groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>${mysql.version}</version>
+		    <!-- 依赖模块将提供 -->
+		    <scope>provided</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>commons-dbutils</groupId>
+		    <artifactId>commons-dbutils</artifactId>
+		    <version>${dbutils.version}</version>
+		    <!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.xml.bind</groupId>
@@ -47,6 +74,13 @@
 			<!-- 依赖模块将提供 -->
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-log4j12</artifactId>
+		    <version>1.7.25</version>
+		</dependency>
+				
 
 		<!-- <dependency> -->
 		<!-- <groupId>redis.clients</groupId> -->
