--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,24 @@
 		<dbutils.version>1.6</dbutils.version>
 		<mysql.version>6.0.6</mysql.version>
 		<sqlite.version>3.16.1</sqlite.version>
+		<commons-pool2.version>2.4.2</commons-pool2.version>
+		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 	</properties>
 
 	<dependencies>
 
 		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>${commons-beanutils.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
-			<version>2.4.2</version>
+			<version>${commons-pool2.version}</version>
 			<!-- 依赖模块将提供 -->
 			<scope>provided</scope>
 		</dependency>
