--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.hm.common</groupId>
@@ -23,7 +24,7 @@
 		<slf4j.version>1.7.22</slf4j.version>
 		<commons-fileupload.version>1.3.2</commons-fileupload.version>
 		<commons-io.version>1.3.2</commons-io.version>
-		<redis-clients.version>2.6.0</redis-clients.version>
+		<jedis-clients.version>2.6.0</jedis-clients.version>
 		<commons-lang3.version>3.3.1</commons-lang3.version>
 		<redisson.version>2.4.0</redisson.version>
 		<jaxb.version>2.2.12</jaxb.version>
@@ -101,13 +102,13 @@
 		<!-- </dependency> -->
 
 
-		<!-- <dependency> -->
-		<!-- <groupId>redis.clients</groupId> -->
-		<!-- <artifactId>jedis</artifactId> -->
-		<!-- <version>${redis-clients.version}</version> -->
-		<!-- 依赖模块将提供 -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>${jedis-clients.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
