--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,17 @@
 		<sqlite.version>3.16.1</sqlite.version>
 		<commons-pool2.version>2.4.2</commons-pool2.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
+		<mail.version>1.4.7</mail.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>javax.mail </groupId>
+			<artifactId>mail </artifactId>
+			<version>${mail.version} </version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-beanutils</groupId>
