--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,8 @@
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>${mongodb.driver.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
