--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,18 @@
 		<reflections.version>0.9.10</reflections.version>
 		<netty.version>4.1.6.Final</netty.version>
 		<mongodb.driver.version>3.2.2</mongodb.driver.version>
+		<zip4j.version>1.3.2</zip4j.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>net.lingala.zip4j</groupId>
+			<artifactId>zip4j</artifactId>
+			<version>${zip4j.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.mongodb</groupId>
