--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,18 @@
 		<netty.version>4.1.6.Final</netty.version>
 		<mongodb.driver.version>3.2.2</mongodb.driver.version>
 		<zip4j.version>1.3.2</zip4j.version>
+		<ganymed-ssh2.version>build210-hudson-1</ganymed-ssh2.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.jvnet.hudson</groupId>
+			<artifactId>ganymed-ssh2</artifactId>
+			<version>${ganymed-ssh2.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>net.lingala.zip4j</groupId>
