--- a/pom.xml
+++ b/pom.xml
@@ -44,9 +44,18 @@
 		<mongodb.driver.version>3.2.2</mongodb.driver.version>
 		<zip4j.version>1.3.2</zip4j.version>
 		<ganymed-ssh2.version>build210-hudson-1</ganymed-ssh2.version>
+		<jsch.version>0.1.54</jsch.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>com.jcraft</groupId>
+			<artifactId>jsch</artifactId>
+			<version>${jsch.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.jvnet.hudson</groupId>
