--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,18 @@
 		<zip4j.version>1.3.2</zip4j.version>
 		<ganymed-ssh2.version>build210-hudson-1</ganymed-ssh2.version>
 		<jsch.version>0.1.54</jsch.version>
+		<jsoup.version>1.7.2</jsoup.version>
 	</properties>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>${jsoup.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>com.jcraft</groupId>
