--- a/pom.xml
+++ b/pom.xml
@@ -53,27 +53,18 @@
 		<aliyun-java-sdk-dysmsapi.version>1.0.0</aliyun-java-sdk-dysmsapi.version>
 		<aliyun-java-sdk-core.version>3.3.1</aliyun-java-sdk-core.version>
 		<taobao-sms.version>1.0</taobao-sms.version>
-		<htmlcompressor.version>1.4</htmlcompressor.version>
+		<freemarker.version>2.3.27-incubating</freemarker.version>
 	</properties>
 
 	<dependencies>
 
 		<dependency>
-			<groupId>com.yahoo.platform.yui</groupId>
-			<artifactId>yuicompressor</artifactId>
-			<version>2.4.8</version>
-		</dependency>
-
-
-		<dependency>
-			<!-- 静态文件压缩 -->
-			<groupId>com.googlecode.htmlcompressor</groupId>
-			<artifactId>htmlcompressor</artifactId>
-			<version>${htmlcompressor.version}</version>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
 			<!-- 依赖模块将提供 -->
 			<scope>provided</scope>
 		</dependency>
-
 
 		<dependency>
 			<groupId>com.taobao.api</groupId>
