--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,15 @@
 		<rxjava.version>2.1.7</rxjava.version>
 		<lombok.version>1.16.18</lombok.version>
 		<logback-classic.version>1.2.3</logback-classic.version>
+		<pinyin4j.version>2.5.1</pinyin4j.version>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.belerweb</groupId>
+			<artifactId>pinyin4j</artifactId>
+			<version>${pinyin4j.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.reactivex.rxjava2</groupId>
