--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,7 @@
 		<commons-pool2.version>2.4.2</commons-pool2.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<mail.version>1.4.7</mail.version>
-		<akka-actor.version>2.2.5</akka-actor.version>
-		<akka-remote.version>2.4.1</akka-remote.version>
-		<akka-cluster.version>2.4.1</akka-cluster.version>
-		<scala-library.version>2.10.2</scala-library.version>
+		<akka.version>2.5.11</akka.version>
 		<reflections.version>0.9.10</reflections.version>
 		<netty.version>4.1.6.Final</netty.version>
 		<mongodb.driver.version>3.2.2</mongodb.driver.version>
@@ -198,34 +195,22 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>org.scala-lang</groupId> -->
-		<!-- <artifactId>scala-library</artifactId> -->
-		<!-- <version>${scala-library.version}</version> -->
-		<!-- 依赖模块将提供 -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.typesafe.akka</groupId> -->
-		<!-- <artifactId>akka-cluster_2.11</artifactId> -->
-		<!-- <version>${akka-cluster.version}</version> -->
-		<!-- 依赖模块将提供 -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
-			<artifactId>akka-actor_2.10</artifactId>
-			<version>${akka-actor.version}</version>
+			<artifactId>akka-actor_2.12</artifactId>
+			<version>${akka.version}</version>
 			<!-- 依赖模块将提供 -->
 			<scope>provided</scope>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>com.typesafe.akka</groupId> -->
-		<!-- <artifactId>akka-remote_2.11</artifactId> -->
-		<!-- <version>${akka-remote.version}</version> -->
-		<!-- 依赖模块将提供 -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
+
+		<dependency>
+			<groupId>com.typesafe.akka</groupId>
+			<artifactId>akka-testkit_2.12</artifactId>
+			<version>${akka.version}</version>
+			<!-- 依赖模块将提供 -->
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>javax.mail </groupId>
 			<artifactId>mail </artifactId>
